--- a/style.css
+++ b/style.css
@@ -1,8 +1,23 @@
+body {
+    background-color: #e7caff;
+}
+
+
+
+
+h5 {
+    font-family: fredoka;
+    font-size: 15px;
+    color: #3d2051;
+}
+
+
 .pixel-color {
     color: #6D3B8F;
 }
 
 .penguin-img {
+
     width: 100%;
     object-fit: contain;
     object-position: center;
